--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 Designed and built by Ed Sperr (esperr@uga.edu or ed_sperr@hotmail.com)
 -->
 <body>
-<script type="text/javascript" src="http://canvg.github.io/canvg/rgbcolor.js"></script>
-<script type="text/javascript" src="http://canvg.github.io/canvg/StackBlur.js"></script>
-<script type="text/javascript" src="http://canvg.github.io/canvg/canvg.js"></script>
+<script type="text/javascript" src="https://canvg.github.io/canvg/rgbcolor.js"></script>
+<script type="text/javascript" src="https://canvg.github.io/canvg/StackBlur.js"></script>
+<script type="text/javascript" src="https://canvg.github.io/canvg/canvg.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -435,6 +435,7 @@ function drawMainChart() {
   }
   //we clear the address bar...
   var currentLocation = location.hostname + location.pathname;
+  console.log(currentLocation);
   history.pushState({ "myData": searches, "startyear": startYear, "endyear": endYear }, "", currentLocation);
   var shareUrl = currentLocation + "?" +  myQuerystring;
   $( "#sharingUrlcontent" ).attr( "style", "width: 35em;" );
