--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
 Designed and built by Ed Sperr (esperr@uga.edu or ed_sperr@hotmail.com)
 -->
 <body>
+<script>
+// Detecting old IE
+var ua = window.navigator.userAgent;
+var msie = ua.indexOf("MSIE ");
+if (msie > 0) {
+    var ieVer = parseInt(ua.substring(msie + 5, ua.indexOf(".", msie)));
+    if (ieVer < 9) {
+      alert("Sorry! PubMed by Year does not work with IE8 or below....");
+    }
+}
+</script>
 <script type="text/javascript" src="https://canvg.github.io/canvg/rgbcolor.js"></script>
 <script type="text/javascript" src="https://canvg.github.io/canvg/StackBlur.js"></script>
 <script type="text/javascript" src="https://canvg.github.io/canvg/canvg.js"></script>
@@ -167,20 +178,6 @@ Designed and built by Ed Sperr (esperr@uga.edu or ed_sperr@hotmail.com)
 <script>
 
 (function() {
-// Detecting old IE
-var ua = window.navigator.userAgent;
-var msie = ua.indexOf("MSIE ");
-if (msie > 0) // If Internet Explorer, return version number
-{
-    var ieVer = parseInt(ua.substring(msie + 5, ua.indexOf(".", msie)));
-    if (ieVer < 9) {
-      $("#search").empty();
-      $("#search").append('<div class="alert alert-warning alert-danger" role="alert">');
-      $("#search .alert").append('<h4>Sorry!&nbsp;Your browser is not supported</h4>');
-      $("#search .alert").append("<p>PubMed by Year uses jQuery and Material Charts. A browser that supports these applications (e.g. IE9 or above) is required.</p>");
-    };
-}
-
 
 var searches = { counts:{}, searchterms:[] };
 var dataURL = "";
