Fixed a typo in the Printable version

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ function drawMainChart() {
       ctx.fill();
       ctx.font="13px Roboto";
       ctx.fillStyle = "Gray";
-      ctx.fillText("Made with MEDLINE by Year: http://esperr.github.io/medline-by-year",0,height + 25);
+      ctx.fillText("Made with PubMed by Year: http://esperr.github.io/pubmed-by-year",0,height + 25);
 
       //var can = document.getElementById('canvas');
       var can3 = document.getElementById('canvas');
