--- a/about.html
+++ b/about.html
@@ -74,9 +74,7 @@
   <div class="panel panel-default">
   <div class="panel-body">
     <h2>See also...</h2>
-    <p>Want to have even more fun with MEDLINE visualizations? Check out <a href="http://esperr.github.io/mesh-cat-graph/">
-      MeSH Category Graph</a>, <a href="https://esperr.github.io/mesh-subhead-graph/">MeSH Subheading Graph</a>, <a href="https://pubvenn.appspot.com/">PubVenn</a>
-      and <a href="https://esperr.github.io/mapping-medline/">Mapping MEDLINE</a>.</p>
+    <p>Want to have even more fun with tools like this? Check out <a href="https://esperr.github.io/visualizingpubmed/">Visualizing PubMed/a>.</p>
   </div>
   </div>
 
