--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
   <div class="panel panel-default">
   <div class="panel-body">
     <h2>See also...</h2>
-    <p>Want to have even more fun with tools like this? Check out <a href="https://esperr.github.io/visualizingpubmed/">Visualizing PubMed/a>.</p>
+    <p>Want to have even more fun with tools like this? Check out <a href="https://esperr.github.io/visualizingpubmed/">Visualizing PubMed</a>.</p>
   </div>
   </div>
 
