--- a/about.html
+++ b/about.html
@@ -53,14 +53,14 @@
 	<div class="panel panel-default">
 	<div class="panel-body">
   	<h3>Technologies</h3>
-		<p>PubMed by Year is lashed together with bailing wire and and <a href="http://jquery.com/">jQuery</a>. NCBI does not have an easy way to grab by-year counts for a search (short of launching 50+ calls to the API), so a <a href="https://github.com/esperr/med-by-year">custom webservice</a>
+		<p>PubMed by Year is lashed together with bailing wire and <a href="http://jquery.com/">jQuery</a>. NCBI does not have an easy way to grab by-year counts for a search (short of launching 50+ calls to the API), so a <a href="https://github.com/esperr/med-by-year">custom webservice</a>
       is used to fetch them. <a href="https://developers.google.com/chart/interactive/docs/gallery/linechart">Google Charts</a> is used to draw the charts and responsive layout is made easier with <a href="http://getbootstrap.com/">Bootstrap</a>.</p>
     <p>You can find the source code for this application at <a href="https://github.com/esperr/pubmed-by-year">GitHub</a>.</p>
 
     <h3>License</h3>
 		<p>Please note that the information provided here comes ultimately from the <a href="http://www.ncbi.nlm.nih.gov/">National Center for Biotechnology Information</a> and is subject to the terms listed under their
 		<a href="http://www.ncbi.nlm.nih.gov/About/disclaimer.html">Disclaimer and Copyright notice</a>.</p>
-    <p>Feel free to us this tool as you wish, but if you use PubMed by Year for publication, I'd appreciate a citation:
+    <p>Feel free to use this tool as you wish, but if you use PubMed by Year for publication, I'd appreciate a citation:
       <blockquote>
         Sperr E. PubMed by Year [Internet]. 2016 [cited <em>your_date_here</em>]. Available from http://esperr.github.io/pubmed-by-year/
       </blockquote>
