Data for the first part of the year is supoer-hinky, so the default end year on the view is  now last year

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ var d = new Date();
 var thisYear = d.getFullYear();
 
 var startYear = 1945;
-var endYear = thisYear;
+var endYear = thisYear-1;
 
 var data;
 var options;
