--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@ var d = new Date();
 //What was the year 30 days ago?
 d.setDate(d.getDate()-30);
 var endYear = d.getFullYear();
+var thisYear = endYear;
 
 var startYear = 1945;
 
